--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
@@ -4175,9 +4175,8 @@ msgid "Property type"
 msgstr "Types de propriété"
 
 #: ../code/application/views/city_view.php:105
-#, fuzzy
 msgid "Most Popular Types"
-msgstr "Les plus populaires"
+msgstr "Type le plus populaire"
 
 #: ../code/application/views/city_view.php:106
 #: ../code/application/views/city_ajax_view.php:226
@@ -4204,9 +4203,8 @@ msgid "Camping"
 msgstr "Camping"
 
 #: ../code/application/views/city_view.php:132
-#, fuzzy
 msgid "Most Popular Amenities"
-msgstr "Les plus populaires"
+msgstr "Services les plus populaires"
 
 #: ../code/application/views/city_view.php:205
 #: ../code/application/views/city_ajax_view.php:222
