--- a/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
-"PO-Revision-Date: 2013-04-25 20:24+0200\n"
+"PO-Revision-Date: 2013-04-27 22:08+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -3225,14 +3225,14 @@ msgid "1 guest in 1 Bedroom."
 msgstr "1 host v 1 ložnici."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "%d hostů v %d ložnicích(%d hostů v každém pokoji)."
+msgstr "1 hostů v %d ložnicích(%d hostů v každém pokoji)."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "%d hostů v %d ložnicích(%d hostů v každém pokoji)."
+msgstr "1 hostů v %d ložnicích(%d hostů v každém pokoji)."
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3258,9 +3258,9 @@ msgstr "%d hostů v %d ložnicích(%d hostů v každém pokoji)."
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
 #: ../code/application/views/hb/booking_avail_view.php:571
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
-msgstr "%d hostů v %d ložnicích(%d hostů v každém pokoji)."
+msgstr "%d hostů v %d ložnicích (%d hostů v každém pokoji)."
 
 #: ../code/application/views/property_rooms_avail.php:451
 #: ../code/application/views/hw/booking_avail_view.php:494
@@ -4207,9 +4207,8 @@ msgid "Close Map"
 msgstr "Zavři mapu"
 
 #: ../code/application/views/city_view.php:257
-#, fuzzy
 msgid "Filter by Landmarks"
-msgstr "Filtruj:"
+msgstr "Filtrovat podle důležitých bodů"
 
 #: ../code/application/views/city_view.php:261
 #, fuzzy
@@ -4256,9 +4255,10 @@ msgid "From"
 msgstr "Od"
 
 #: ../code/application/views/city_view.php:422
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "Prosím vyjměte 1 ubytovací zařízení ze seznamu."
+msgstr ""
+"Může být porovnáno jen 5 ubytovacích zařízení. Prosím vyjměte 1 ubytovací "
+"zařízení ze seznamu."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
@@ -4569,9 +4569,9 @@ msgid "Bedrooms you will occupy:"
 msgstr "Pokoje, které obsadíte:"
 
 #: ../code/application/views/hw/booking_avail_view.php:526
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
-msgstr "%d hostů v %d ložnicích(1 host v každém pokoji)."
+msgstr "%d hostů v %d ložnicích (1 host v každém pokoji)."
 
 #: ../code/application/views/hw/booking_avail_view.php:536
 #: ../code/application/views/hb/booking_avail_view.php:529
@@ -4585,9 +4585,9 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:591
 #: ../code/application/views/hb/booking_avail_view.php:518
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
-msgstr "%d hostů v %d ložnicích(1 host v každém pokoji)."
+msgstr "%d hostů v %d ložnicích (1 host v každém pokoji)."
 
 #: ../code/application/views/hw/booking_avail_view.php:624
 #: ../code/application/views/hb/booking_avail_error_view.php:14
@@ -8344,9 +8344,9 @@ msgid "Remove from any searches for 1 week"
 msgstr "Odeberte ze všech výsledků vyhledávání na 1 týden"
 
 #: ../code/application/views/helpfile/pofields.php:776
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Ensuite"
-msgstr "Standartní soukromá ložnice pro 1 osobu se sdílenou koupelnou"
+msgstr "Standartní soukromý jednolůžkový pokoj s koupelnou"
 
 #: ../code/application/views/helpfile/pofields.php:777
 #, php-format
@@ -8379,9 +8379,9 @@ msgid "Deluxe %d Bed Family Room Ensuite"
 msgstr "Sedmilůžkový deluxe rodinný pokoj s koupelnou"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "Filtruj:"
+msgstr "Filtrovat podle oblasti"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
@@ -8477,82 +8477,85 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
+"Kliknutím na \"vytvořit účet\" potvrzujete souhlas s našimi všeobecnými "
+"podmínkami a zásadami ochrany osobních údajů."
 
 #: ../code/application/views/helpfile/pofields.php:801
-#, fuzzy, php-format
+#, php-format
 msgid "Create account"
-msgstr "Pozdní odhlášení"
+msgstr "Vytvořit účet"
 
 #: ../code/application/views/helpfile/pofields.php:802
 #, php-format
 msgid "Tell me about great deals and exclusive discounts!"
-msgstr ""
+msgstr "Informujte mne o výhodných nabídkách a vyjímečných slevách!"
 
 #: ../code/application/views/helpfile/pofields.php:803
-#, fuzzy, php-format
+#, php-format
 msgid "Save this property as a favorite"
-msgstr "Ohodnoť tuto ubytovnu"
+msgstr "Uložit toto ubytovací zařízení jako oblíbené"
 
 #: ../code/application/views/helpfile/pofields.php:804
 #, php-format
 msgid ""
 "We will never sell your personal information - You can unsubscribe anytime."
 msgstr ""
+"Nikdy neprodáme vaše osobní data - můžete kdykoli zrušit svou registraci."
 
 #: ../code/application/views/helpfile/pofields.php:805
 #, php-format
 msgid "Your private notes (optional)"
-msgstr ""
+msgstr "Vaše osobní poznámky (nepovinné)"
 
 #: ../code/application/views/helpfile/pofields.php:806
 #, php-format
 msgid "Characters left:"
-msgstr ""
+msgstr "Zbývající znaky:"
 
 #: ../code/application/views/helpfile/pofields.php:807
-#, fuzzy, php-format
+#, php-format
 msgid "Update Notes"
-msgstr "Důležité Poznámky"
+msgstr "Aktualizace poznámek"
 
 #: ../code/application/views/helpfile/pofields.php:808
-#, fuzzy, php-format
+#, php-format
 msgid "Remove from my favorites"
-msgstr "Odeberte z tohoto vyhledávání"
+msgstr "Vyjmout z mých oblíbených"
 
 #: ../code/application/views/helpfile/pofields.php:809
 #, php-format
 msgid "Cancel"
-msgstr ""
+msgstr "Zrušit"
 
 #: ../code/application/views/helpfile/pofields.php:810
 #, php-format
 msgid "My favorite properties"
-msgstr ""
+msgstr "Moje oblíbená ubytovací zařízení"
 
 #: ../code/application/views/helpfile/pofields.php:811
 #, php-format
 msgid "List of favorite properties"
-msgstr ""
+msgstr "Seznam oblíbených ubytovacích zařízení"
 
 #: ../code/application/views/helpfile/pofields.php:812
 #, php-format
 msgid "My short notes about the property"
-msgstr ""
+msgstr "Moje stručné poznámky o ubytovacím zařízení"
 
 #: ../code/application/views/helpfile/pofields.php:813
-#, fuzzy, php-format
+#, php-format
 msgid "Edit or remove"
-msgstr "Odstraň"
+msgstr "Editovat nebo vyjmout"
 
 #: ../code/application/views/helpfile/pofields.php:814
-#, fuzzy, php-format
+#, php-format
 msgid "Saved to my favorites"
-msgstr "Prohlédnout oblíbené"
+msgstr "Uložit do oblíbených"
 
 #: ../code/application/views/helpfile/pofields.php:815
-#, fuzzy, php-format
+#, php-format
 msgid "Add to my favorites"
-msgstr "Přidej oblíbený"
+msgstr "Přidat do oblíbených"
 
 #: ../code/application/views/helpfile/pofields.php:816
 #, php-format
@@ -8560,16 +8563,20 @@ msgid ""
 "You can save this property as a favorite in your account so you can easily "
 "book it at a later date if you wish."
 msgstr ""
+"Můžete si uložit toto ubytovací zařízení na svém účtu jako oblíbené,abyste "
+"ho, budete-li si to přát, mohli později snadno rezervovat."
 
 #: ../code/application/views/helpfile/pofields.php:817
 #, php-format
 msgid "Account created"
-msgstr ""
+msgstr "Účet vytvořen"
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
 msgid "To save a property as a favorite, you must be login to your account."
 msgstr ""
+"Pro uložení ubytovacího zařízení do oblíbených se musíte přihlásit ke svému "
+"účtu."
 
 #: ../code/application/views/helpfile/pofields.php:819
 #, php-format
@@ -8577,54 +8584,56 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
+"Vytvoření účtu vám umožní ukládat ubytovací zařízení do oblíbených,získáte "
+"přístup ke svým rezervacím a cenám a mnoho dalších výhod."
 
 #: ../code/application/views/helpfile/pofields.php:820
 #, php-format
 msgid "Please enter your email address and we will send you a password."
-msgstr ""
+msgstr "Vyplňte prosím svou emailovou adresu a my vám zašleme heslo."
 
 #: ../code/application/views/helpfile/pofields.php:821
-#, fuzzy, php-format
+#, php-format
 msgid "Saved favorite properties"
-msgstr "Hledej více hostelů v %s "
+msgstr "Uložená oblíbená ubytovací zařízení"
 
 #: ../code/application/views/helpfile/pofields.php:822
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d)"
-msgstr "Záloha k zaplacení nyní:"
+msgstr "Záloha splatná nyní (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d) is payable upon arrival. You will "
 "find the property's contact information (email, address, telephone number…) "
 "in your confirmation email after you have made your reservation."
 msgstr ""
-"Nám zaplatíte pouze zálohu (10%% z celé částky) pro zabezpečení vaší "
-"rezervace. Zbytek (90%%) je splatný po příjezdu na místo. Informace o vašem "
-"ubytování (email, adresu, telefonní číslo, ...) najdete ve vašem "
-"potvrzovacím emailu poté co si uděláte rezervaci.  "
+"Zaplatíte nyní pouze zálohu (%d z celkové částky) jako potvrzení a zajištění "
+"vaší rezervace. Zbývající částku (%d) splatíte při příjezdu. Informaci o "
+"ubytovacím zařízení (email,adresu,telefonní číslo...) naleznete v "
+"potvrzujícím emailu po dokončení rezervace."
 
 #: ../code/application/views/helpfile/pofields.php:824
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d)"
-msgstr "Záloha:"
+msgstr "Záloha (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:825
-#, fuzzy, php-format
+#, php-format
 msgid "Amount already paid:"
-msgstr "Platba již byla udělána"
+msgstr "Již zaplacená částka:"
 
 #: ../code/application/views/helpfile/pofields.php:826
 #, php-format
 msgid "The most popular"
-msgstr ""
+msgstr "Nejoblíbenější"
 
 #: ../code/application/views/helpfile/pofields.php:827
-#, fuzzy, php-format
+#, php-format
 msgid "Most popular"
-msgstr "Nejdůležitější"
+msgstr "Nejoblíbenější"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
